--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "mermaid": "^11.4.1",
     "new-github-issue-url": "^1.1.0",
     "next": "^15.2.2",
+    "@orama/react-components": "^0.5.1",
     "pdf-lib": "^1.17.1",
     "posthog-js": "^1.230.2",
     "prismjs": "^1.30.0",
